Fixed robots txt delivery